# iondrive

./: .gitignore  Cargo.toml  README.md  pyproject.toml  requirements-dev.txt  setup.py
.github/workflows/: main.yml  manylinux.yml
benches/: bench_eager.py  bench_eager_cjk_iondrive.py  bench_eager_cjk_vanilla.py  bench_eager_iondrive.py  bench_eager_vanilla.py  bench_lazy.py  bench_lazy_iondrive.py  bench_lazy_vanilla.py
iondrive/: __init__.py  __init__.pyi
src/: anchor.rs  component.rs  contour.rs  contourpoint.rs  guideline.rs  info.rs  lib.rs  plist.rs
tests/: test_equivalence.py
tests/data/NotoSans-Regular.ufo/: features.fea  fontinfo.plist  groups.plist  kerning.plist  lib.plist
tests/data/NotoSans-Regular.ufo/glyphs/: A_-cy.glif  A_.glif  A_A_.glif  A_E_.glif  A_E_acute.glif  A_E_macron.glif  A_E_mod.glif  A_E_small.glif  A_V_horizontalbar.glif  A_Y_.glif  A_acute.glif  A_breve-cy.glif  A_breve.glif  A_breveacute.glif  A_brevedotbelow.glif  A_brevegrave.glif  A_brevehookabove.glif  A_brevetilde.glif  A_caron.glif  A_circumflex.glif  A_circumflexacute.glif  A_circumflexdotbelow.glif  A_circumflexgrave.glif  A_circumflexhookabove.glif  A_circumflextilde.glif  A_dblgrave.glif  A_dieresis-cy.glif  A_dieresis.glif  A_dieresismacron.glif  A_dotaccent.glif  A_dotbelow.glif  A_dotmacron.glif  A_evolapuk.glif  A_glottal.glif  A_grave.glif  A_hookabove.glif  A_ie-cy.glif  A_in-egyptological.glif  A_invertedbreve.glif  A_lef-egyptological.glif  (+3705 more)
tests/data/dataimagetest.ufo/glyphs/: a.glif
