[package]
name = "iondrive"
version = "0.1.1"
authors = ["Simon Cozens <simon@simon-cozens.org>"]
edition = "2018"

[dependencies]
rayon = "^1.5"
norad = { version = "^0.5", features = ["rayon"] }
pyo3 = { version = "^0.14", features = ["extension-module"] }
plist = "^1.2"

[lib]
crate-type = ["cdylib"]

[package.metadata.maturin]
classifier = [
  "Programming Language :: Rust",
]
